Fixed formatting of Directions page X marker and scroll bar overflow.

--- a/Baseball 101/src/App.css
+++ b/Baseball 101/src/App.css
@@ -412,9 +412,10 @@ button {
 
 #closeDirections {
   position: fixed;
+  display: flex;
   top: 0.75rem;
   right: 1rem;
-  padding: 0.25rem;
+  /* padding: 0.25rem; */
   background-color: white;
   color: black;
   border-color: black;
@@ -422,8 +423,8 @@ button {
   border-style: solid;
   font-size: 1.25rem;
   font-weight: 900;
-  width: 1.5rem;
-  height: 1.5rem;
+  width: 1.75rem;
+  height: 1.75rem;
   border-radius: 1.25rem;
   text-align: center;
   vertical-align: center;
@@ -440,9 +441,23 @@ button {
 }
 
 #directionsText {
-  overflow: auto;
+  overflow-y: scroll;
+  overflow-x: hidden;
   font-family: Helvetica;
   text-align: left;
+  position: fixed;
+  top: 52%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: rgba(0, 0, 0, 0.8);
+  color: white;
+  padding: 50px;
+  z-index: 1000;
+  width: 70%;
+  height: 65%;
+  border-radius: 0.5rem;
+  border-color: white;
+  border: 0.2rem solid;
 }
 
 #exampleGameplay div {
@@ -531,4 +546,8 @@ button {
   border-bottom-left-radius: 0px;
   border-bottom-right-radius: 0px;
   border-color: rgba(255, 255, 255, 0.75);
+}
+
+.outerDirections {
+  overflow: hidden;
 }
